// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`OffchainOrderLineItem > should render type EXCHANGE_RATE 1`] = `
<DocumentFragment>
  .c0 {
  color: #131313;
  letter-spacing: -0.01em;
}

.c1 {
  cursor: auto;
  color: rgba(19, 19, 19, 0.63);
}

.c2 {
  text-align: right;
  overflow-wrap: break-word;
}

.c3 {
  background-color: transparent;
  border: none;
  cursor: pointer;
  align-items: center;
  justify-content: flex-start;
  padding: 0;
  grid-template-columns: 1fr auto;
  grid-gap: 0.25rem;
  display: flex;
  flex-direction: row;
  text-align: left;
  flex-wrap: wrap;
  user-select: text;
}

<span
    class=""
    style="display: contents;"
  >
    <div
      class="_display-flex _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-row _alignItems-center _justifyContent-space-betwe3241 _width-10037"
    >
      <div
        class="c0 c1 css-142zc9n"
        data-testid="swap-li-label"
      >
        Rate
      </div>
      <div
        class="c0 c2 css-142zc9n"
      >
        <button
          class="c3"
          title="1 USDC = <0.00001 DAI "
        >
          <div
            class="c0 css-142zc9n"
          >
            1 USDC = &lt;0.00001 DAI 
          </div>
           
        </button>
      </div>
    </div>
    <div
      style="display: contents;"
    />
  </span>
</DocumentFragment>
`;

exports[`OffchainOrderLineItem > should render type NETWORK_COST 1`] = `
<DocumentFragment>
  .c0 {
  color: #131313;
  letter-spacing: -0.01em;
}

.c1 {
  cursor: auto;
  color: rgba(19, 19, 19, 0.63);
}

.c2 {
  text-align: right;
  overflow-wrap: break-word;
}

<span
    class=""
    style="display: contents;"
  >
    <div
      class="_display-flex _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-row _alignItems-center _justifyContent-space-betwe3241 _width-10037"
    >
      <div
        class="c0 c1 css-142zc9n"
        data-testid="swap-li-label"
      >
        Network cost
      </div>
      <div
        class="c0 c2 css-142zc9n"
      >
        <span>
          $0
        </span>
      </div>
    </div>
    <div
      style="display: contents;"
    />
  </span>
</DocumentFragment>
`;

exports[`OffchainOrderLineItem > should render type TRANSACTION_ID 1`] = `
<DocumentFragment>
  .c0 {
  color: #131313;
  letter-spacing: -0.01em;
}

.c1 {
  cursor: auto;
  color: rgba(19, 19, 19, 0.63);
}

.c2 {
  text-align: right;
  overflow-wrap: break-word;
}

.c3 {
  text-decoration: none;
  cursor: pointer;
  transition-duration: 125ms;
  color: #FF37C7;
  stroke: #FF37C7;
  font-weight: 500;
}

.c3 :hover {
  opacity: 0.6;
}

.c3 :active {
  opacity: 0.4;
}

<span
    class=""
    style="display: contents;"
  >
    <div
      class="_display-flex _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-row _alignItems-center _justifyContent-space-betwe3241 _width-10037"
    >
      <div
        class="c0 c1 css-142zc9n"
        data-testid="swap-li-label"
      >
        Transaction ID
      </div>
      <div
        class="c0 c2 css-142zc9n"
      >
        <a
          class="c3"
          href="https://etherscan.io/tx/0x123"
          rel="noopener noreferrer"
          target="_blank"
        >
          0x12...x123
        </a>
      </div>
    </div>
    <div
      style="display: contents;"
    />
  </span>
</DocumentFragment>
`;
